# serializer version: 1
# name: test_all_entities[sensor.focused_einstein_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.focused_einstein_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_focused_einstein_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.focused_einstein_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'focused_einstein None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.focused_einstein_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/redis:7',
  })
# ---
# name: test_all_entities[sensor.focused_einstein_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.focused_einstein_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'portainer_test_entry_123_focused_einstein_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.focused_einstein_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'focused_einstein None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.focused_einstein_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Up 12 hours',
  })
# ---
# name: test_all_entities[sensor.funny_chatelet_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.funny_chatelet_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_funny_chatelet_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.funny_chatelet_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'funny_chatelet None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.funny_chatelet_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/ubuntu:latest',
  })
# ---
# name: test_all_entities[sensor.funny_chatelet_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.funny_chatelet_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'portainer_test_entry_123_funny_chatelet_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.funny_chatelet_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'funny_chatelet None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.funny_chatelet_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Up 4 days',
  })
# ---
# name: test_all_entities[sensor.practical_morse_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.practical_morse_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_practical_morse_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.practical_morse_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'practical_morse None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.practical_morse_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/python:3.13-slim',
  })
# ---
# name: test_all_entities[sensor.practical_morse_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.practical_morse_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'portainer_test_entry_123_practical_morse_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.practical_morse_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'practical_morse None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.practical_morse_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Up 6 hours',
  })
# ---
# name: test_all_entities[sensor.serene_banach_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.serene_banach_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_serene_banach_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.serene_banach_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'serene_banach None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.serene_banach_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/nginx:latest',
  })
# ---
# name: test_all_entities[sensor.serene_banach_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.serene_banach_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'portainer_test_entry_123_serene_banach_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.serene_banach_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'serene_banach None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.serene_banach_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Up 2 days',
  })
# ---
# name: test_all_entities[sensor.stoic_turing_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.stoic_turing_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'image',
    'unique_id': 'portainer_test_entry_123_stoic_turing_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.stoic_turing_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'stoic_turing None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.stoic_turing_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docker.io/library/postgres:15',
  })
# ---
# name: test_all_entities[sensor.stoic_turing_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.stoic_turing_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'portainer_test_entry_123_stoic_turing_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.stoic_turing_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'stoic_turing None',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.stoic_turing_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Up 1 day',
  })
# ---
